[1.1.1] Minor: - Display item groups in /purchase even if small screen   - Large screen can now collapse item groups too - Changed fixed px value for media-queries to Bootstrap's :root --breakpoint

--- a/web/css/all.css
+++ b/web/css/all.css
@@ -250,13 +250,13 @@ footer a:hover {
 
 /** Desktop specific **/
 
-@media (max-width: 800px), (max-device-width: 800px) {
+@media (max-width: var(--breakpoint-md)), (max-device-width: var(--breakpoint-md)) {
     nav.navbar {
         width: 100%;
     }
 }
 
-@media (max-width: 800px), (max-device-width: 800px) {
+@media (max-width: var(--breakpoint-md)), (max-device-width: var(--breakpoint-md)) {
     .container-fluid {
         width: 100%;
     }
@@ -264,7 +264,7 @@ footer a:hover {
 
 /** Mobile specific **/
 
-@media (max-width: 800px), (max-device-width: 800px) {
+@media (max-width: var(--breakpoint-md)), (max-device-width: var(--breakpoint-md)) {
     .navbar-brand img {
         width: 6.5rem;
     }
